# c2pas

./: ChangeLog  Doxyfile  LICENCE  Makefile.am  Makefile.in  aclocal.m4  alltypes.hxx  ast.cxx  ast.hxx  astprint.cxx  astprint.hxx  c2pas.cxx  c2pas.html  configure  configure.in  csynan.cxx  csynan.hxx  csynan.y  csynan.yxx  defines.hxx  genlexan.pl  gentable.pl  join.hxx  keywords.txt  lexan.cxx  lexan.hxx  lexan.lex  reconf  switch.cxx  switch.hxx  test.c
docs/: degener_symb.txt
