dnl Process this file with autoconf to produce a configure script.
AC_INIT(c2pas.cxx)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE(c2pas, 0.1)
AM_CONFIG_HEADER([config.h])
AC_PROG_CXX
AC_PROG_INSTALL
AM_PROG_LEX
AC_PROG_YACC
dnl AC_CHECK_HEADER(popt.h,,[AC_MSG_ERROR([popt.h not found])])
dnl AC_CHECK_LIB(popt,poptGetContext,,[AC_MSG_ERROR([libpopt not found])])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
